# django_ninja_bot_fintech

./: LICENSE  db.sqlite3  know_how.txt  pyproject.toml
config/: settings.py  urls.py
devices/: admin.py  api.py  models.py  schemas.py
devices/migrations/: 0001_initial.py
